# AOC2025

./: .gitignore  README.md  config.go  main.go
C/: CMakeLists.txt  README.md  main.c
C/day_1/: day1.c  day1.h
GO/: README.md  config.go  main.go
GO/day_1/: part1.go  part2.go  type.go
GO/day_10/: part1.go  part2.go  type.go
GO/day_11/: part1.go  part2.go  type.go  utils.go
GO/day_12/: part1.go  part2.go  type.go
GO/day_2/: part1.go  part2.go  type.go
GO/day_3/: part1.go  part2.go  type.go
GO/day_4/: part1.go  part2.go  utils.go
GO/day_5/: part1.go  part2.go  type.go
GO/day_6/: part1.go  part2.go  utils.go
GO/day_7/: part1.go  part2.go  type.go
GO/day_8/: dist_builder.go  part1.go  part2.go  set_builder.go  type.go  utils.go
GO/day_9/: part1.go  part2.go  ray_casting.go  type.go  utils.go
GO/utils/: math.go  parse_args.go
JS/day_11/: part1.js  part2.js
JS/day_7/: part1.js  part2.js
day_1/: part1.go  part2.go  type.go
day_2/: part1.go  part2.go  type.go  utils.go
day_3/: part1.go  part2.go  type.go
day_4/: part1.go  part2.go  type.go  utils.go
day_5/: part1.go  part2.go  utils.go
day_6/: part1.go  type.go
types/: types.go
utils/: math.go  parse_args.go  read_input.go
